--- a/CSS/value.css
+++ b/CSS/value.css
@@ -1,7 +1,8 @@
 .consulting-section {
-  padding: 10px 20px;
-  background-color: #f3f3f3;
-
+  padding: 40px 20px;
+  background: url(https://businessconsultingagency.com/wp-content/uploads/2023/09/impact-of-consulting-services.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
   font-family: "Segoe UI", sans-serif;
 }
 
